levenslied/parser.js
module.exports = // Generated by Peggy 3.0.2.
//
// https://peggyjs.org/
(function() {
  "use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { start: peg$parsestart };
  var peg$startRuleFunction = peg$parsestart;

  var peg$c0 = "\n";
  var peg$c1 = "stop";
  var peg$c2 = "in";
  var peg$c3 = "let";
  var peg$c4 = "be";
  var peg$c5 = "bouw";
  var peg$c6 = "op";
  var peg$c7 = ",";
  var peg$c8 = "haal";
  var peg$c9 = "neer";
  var peg$c10 = "als";
  var peg$c11 = "totdat";
  var peg$c12 = "zolang";
  var peg$c13 = "herbeleef";
  var peg$c14 = "continue";
  var peg$c15 = "doorbreek de cirkel";
  var peg$c16 = "break";
  var peg$c17 = "zonder";
  var peg$c18 = "met";
  var peg$c19 = "times";
  var peg$c20 = "of";
  var peg$c21 = "over";
  var peg$c22 = "between";
  var peg$c23 = "en";
  var peg$c24 = "noch";
  var peg$c25 = "niet";
  var peg$c26 = "ontvangt";
  var peg$c27 = "neemt";
  var peg$c28 = "geef";
  var peg$c29 = "terug";
  var peg$c30 = "is";
  var peg$c31 = "zijn";
  var peg$c32 = "hoger";
  var peg$c33 = "groter";
  var peg$c34 = "sterker";
  var peg$c35 = "beter";
  var peg$c36 = "dan";
  var peg$c37 = "lager";
  var peg$c38 = "kleiner";
  var peg$c39 = "zwakker";
  var peg$c40 = "slechter";
  var peg$c41 = "zo";
  var peg$c42 = "hoog";
  var peg$c43 = "groot";
  var peg$c44 = "sterk";
  var peg$c45 = "goed";
  var peg$c46 = "laag";
  var peg$c47 = "klein";
  var peg$c48 = "zwak";
  var peg$c49 = "slecht";
  var peg$c50 = "het";
  var peg$c51 = "hij";
  var peg$c52 = "zij";
  var peg$c53 = "hem";
  var peg$c54 = "haar";
  var peg$c55 = "hun";
  var peg$c56 = "zegt";
  var peg$c57 = "zeggen";
  var peg$c58 = "zeiden";
  var peg$c59 = "juist";
  var peg$c60 = "ja";
  var peg$c61 = "oke";
  var peg$c62 = "true";
  var peg$c63 = "fout";
  var peg$c64 = "nee";
  var peg$c65 = "leugens";
  var peg$c66 = "false";
  var peg$c67 = "leeg";
  var peg$c68 = "stil";
  var peg$c69 = "stilte";
  var peg$c70 = ".";
  var peg$c71 = "\"";
  var peg$c72 = "(";
  var peg$c73 = ")";
  var peg$c74 = "null";
  var peg$c75 = "niets";
  var peg$c76 = "niemand";
  var peg$c77 = "nergens";
  var peg$c78 = "weg";
  var peg$c79 = "zeg";
  var peg$c80 = "fluister";
  var peg$c81 = "roep";
  var peg$c82 = "schreeuw";
  var peg$c83 = "bestaat";
  var peg$c84 = "de";
  var peg$c85 = "een";
  var peg$c86 = "mijn";
  var peg$c87 = "je";
  var peg$c88 = "jouw";
  var peg$c89 = "onze";
  var peg$c90 = "uit";
  var peg$c91 = "waren";
  var peg$c92 = "&";
  var peg$c93 = "'n";

  var peg$r0 = /^[ ]/;
  var peg$r1 = /^[A-Z]/;
  var peg$r2 = /^[^\n]/;
  var peg$r3 = /^[a-z\-.]/i;
  var peg$r4 = /^[^ \n]/;
  var peg$r5 = /^[1-9]/;
  var peg$r6 = /^[0-9]/;
  var peg$r7 = /^[^"]/;
  var peg$r8 = /^[^)]/;

  var peg$e0 = peg$literalExpectation("\n", false);
  var peg$e1 = peg$literalExpectation("Stop", true);
  var peg$e2 = peg$literalExpectation("in", true);
  var peg$e3 = peg$literalExpectation("Let", true);
  var peg$e4 = peg$literalExpectation("be", true);
  var peg$e5 = peg$literalExpectation("Bouw", true);
  var peg$e6 = peg$literalExpectation("op", true);
  var peg$e7 = peg$literalExpectation(",", false);
  var peg$e8 = peg$classExpectation([" "], false, false);
  var peg$e9 = peg$literalExpectation("Haal", true);
  var peg$e10 = peg$literalExpectation("neer", true);
  var peg$e11 = peg$literalExpectation("Als", true);
  var peg$e12 = peg$literalExpectation("Totdat", true);
  var peg$e13 = peg$literalExpectation("Zolang", true);
  var peg$e14 = peg$literalExpectation("Herbeleef", true);
  var peg$e15 = peg$literalExpectation("continue", true);
  var peg$e16 = peg$literalExpectation("Doorbreek de cirkel", true);
  var peg$e17 = peg$literalExpectation("break", true);
  var peg$e18 = peg$literalExpectation("zonder", true);
  var peg$e19 = peg$literalExpectation("met", true);
  var peg$e20 = peg$literalExpectation("times", true);
  var peg$e21 = peg$literalExpectation("of", true);
  var peg$e22 = peg$literalExpectation("over", true);
  var peg$e23 = peg$literalExpectation("between", true);
  var peg$e24 = peg$literalExpectation("en", true);
  var peg$e25 = peg$literalExpectation("noch", true);
  var peg$e26 = peg$literalExpectation("niet", true);
  var peg$e27 = peg$literalExpectation("ontvangt", false);
  var peg$e28 = peg$literalExpectation("neemt", false);
  var peg$e29 = peg$literalExpectation("Geef", true);
  var peg$e30 = peg$literalExpectation("terug", true);
  var peg$e31 = peg$literalExpectation("niet", false);
  var peg$e32 = peg$literalExpectation("is", true);
  var peg$e33 = peg$literalExpectation("zijn", true);
  var peg$e34 = peg$literalExpectation("hoger", false);
  var peg$e35 = peg$literalExpectation("groter", false);
  var peg$e36 = peg$literalExpectation("sterker", false);
  var peg$e37 = peg$literalExpectation("beter", false);
  var peg$e38 = peg$literalExpectation("is", false);
  var peg$e39 = peg$literalExpectation("dan", false);
  var peg$e40 = peg$literalExpectation("lager", false);
  var peg$e41 = peg$literalExpectation("kleiner", false);
  var peg$e42 = peg$literalExpectation("zwakker", false);
  var peg$e43 = peg$literalExpectation("slechter", false);
  var peg$e44 = peg$literalExpectation("zo", false);
  var peg$e45 = peg$literalExpectation("hoog", false);
  var peg$e46 = peg$literalExpectation("groot", false);
  var peg$e47 = peg$literalExpectation("sterk", false);
  var peg$e48 = peg$literalExpectation("goed", false);
  var peg$e49 = peg$literalExpectation("als", false);
  var peg$e50 = peg$literalExpectation("laag", false);
  var peg$e51 = peg$literalExpectation("klein", false);
  var peg$e52 = peg$literalExpectation("zwak", false);
  var peg$e53 = peg$literalExpectation("slecht", false);
  var peg$e54 = peg$literalExpectation("het", false);
  var peg$e55 = peg$literalExpectation("hij", false);
  var peg$e56 = peg$literalExpectation("zij", false);
  var peg$e57 = peg$literalExpectation("hem", false);
  var peg$e58 = peg$literalExpectation("haar", false);
  var peg$e59 = peg$literalExpectation("hun", false);
  var peg$e60 = peg$classExpectation([["A", "Z"]], false, false);
  var peg$e61 = peg$literalExpectation("zegt", false);
  var peg$e62 = peg$literalExpectation("zeggen", false);
  var peg$e63 = peg$literalExpectation("zeiden", false);
  var peg$e64 = peg$classExpectation(["\n"], true, false);
  var peg$e65 = peg$classExpectation([["a", "z"], "-", "."], false, true);
  var peg$e66 = peg$classExpectation([" ", "\n"], true, false);
  var peg$e67 = peg$literalExpectation("juist", false);
  var peg$e68 = peg$literalExpectation("ja", false);
  var peg$e69 = peg$literalExpectation("oke", false);
  var peg$e70 = peg$literalExpectation("true", false);
  var peg$e71 = peg$literalExpectation("fout", false);
  var peg$e72 = peg$literalExpectation("nee", false);
  var peg$e73 = peg$literalExpectation("leugens", false);
  var peg$e74 = peg$literalExpectation("false", false);
  var peg$e75 = peg$literalExpectation("leeg", false);
  var peg$e76 = peg$literalExpectation("stil", false);
  var peg$e77 = peg$literalExpectation("stilte", false);
  var peg$e78 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e79 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e80 = peg$literalExpectation(".", false);
  var peg$e81 = peg$literalExpectation("\"", false);
  var peg$e82 = peg$classExpectation(["\""], true, false);
  var peg$e83 = peg$literalExpectation("(", false);
  var peg$e84 = peg$classExpectation([")"], true, false);
  var peg$e85 = peg$literalExpectation(")", false);
  var peg$e86 = peg$literalExpectation("null", true);
  var peg$e87 = peg$literalExpectation("niets", true);
  var peg$e88 = peg$literalExpectation("niemand", true);
  var peg$e89 = peg$literalExpectation("nergens", true);
  var peg$e90 = peg$literalExpectation("weg", true);
  var peg$e91 = peg$literalExpectation("Zeg", true);
  var peg$e92 = peg$literalExpectation("Fluister", true);
  var peg$e93 = peg$literalExpectation("Roep", true);
  var peg$e94 = peg$literalExpectation("Schreeuw", true);
  var peg$e95 = peg$literalExpectation("bestaat", false);
  var peg$e96 = peg$literalExpectation("als", true);
  var peg$e97 = peg$literalExpectation("ontvangt", true);
  var peg$e98 = peg$literalExpectation("stop", true);
  var peg$e99 = peg$literalExpectation("de", true);
  var peg$e100 = peg$literalExpectation("een", true);
  var peg$e101 = peg$literalExpectation("mijn", true);
  var peg$e102 = peg$literalExpectation("je", true);
  var peg$e103 = peg$literalExpectation("jouw", true);
  var peg$e104 = peg$literalExpectation("onze", true);
  var peg$e105 = peg$literalExpectation("bestaat", true);
  var peg$e106 = peg$literalExpectation("uit", true);
  var peg$e107 = peg$literalExpectation("waren", true);
  var peg$e108 = peg$literalExpectation("&", false);
  var peg$e109 = peg$literalExpectation("'n", false);
  var peg$e110 = peg$literalExpectation("en", false);
  var peg$e111 = peg$anyExpectation();

  var peg$f0 = function(statements) { return statements };
  var peg$f1 = function(variable, value) { lastVarParsed = variable; return { type: "variableDeclaration", variable, value } };
  var peg$f2 = function(value, variable) { lastVarParsed = variable; return { type: "variableAssignment", variable, value } };
  var peg$f3 = function(variable, value) { lastVarParsed = variable; return { type: "variableAssignment", variable, value } };
  var peg$f4 = function(variable, amount) { return { type: "incrementVariable", variable, amount: amount.length } };
  var peg$f5 = function(variable, amount) { return { type: "decrementVariable", variable, amount: amount.length } };
  var peg$f6 = function(output) { return { type: "output", output } };
  var peg$f7 = function(expression, scope) { return { type: "if", condition: expression, block: scope } };
  var peg$f8 = function(expression, scope) { return { type: "loop", kind: "until", condition: expression, block: scope } };
  var peg$f9 = function(expression, scope) { return { type: "loop", kind: "while", condition: expression, block: scope } };
  var peg$f10 = function() { return { type: "loopControl", control: "continue" } };
  var peg$f11 = function() { return { type: "loopControl", control: "break" } };
  var peg$f12 = function(a, b) { return { type: "calculation", op: "subtraction", a, b } };
  var peg$f13 = function(a, b) { return { type: "calculation", op: "addition", a, b } };
  var peg$f14 = function(a, b) { return { type: "calculation", op: "times", a, b } };
  var peg$f15 = function(a, b) { return { type: "calculation", op: "division", a, b } };
  var peg$f16 = function(a, b) { return { type: "booleanLogic", op: "and", a, b } };
  var peg$f17 = function(a, b) { return { type: "booleanLogic", op: "or", a, b } };
  var peg$f18 = function(a, b) { return { type: "booleanLogic", op: "nor", a, b } };
  var peg$f19 = function(a) { return { type: "booleanLogic", op: "not", a } };
  var peg$f20 = function(name, parameters) { return { type: "functionCall", name, parameters } };
  var peg$f21 = function(name, parameters, scope) { return { type: "functionDeclaration", name, parameters, scope } };
  var peg$f22 = function(value) { return { type: "return", value } };
  var peg$f23 = function(a, b) { return { type: "comparison", op: "not-equal", a, b } };
  var peg$f24 = function(a, b) { return { type: "comparison", op: "greater", a, b } };
  var peg$f25 = function(a, b) { return { type: "comparison", op: "lesser", a, b } };
  var peg$f26 = function(a, b) { return { type: "comparison", op: "greater-equal", a, b } };
  var peg$f27 = function(a, b) { return { type: "comparison", op: "lesser-equal", a, b } };
  var peg$f28 = function(a, b) { return { type: "comparison", op: "equal", a, b } };
  var peg$f29 = function() {
    return lastVarParsed;
  };
  var peg$f30 = function(a) { return a; };
  var peg$f31 = function(name) { return { type: "SimpleVariable", name };  };
  var peg$f32 = function(a, b) { return [a,b].join("") };
  var peg$f33 = function(name) { return { type: "ProperVariable", name: name.join("") }; };
  var peg$f34 = function(prefix, name) { return { type: "CommonVariable", name: [prefix, name[1]].join(" ") }; };
  var peg$f35 = function(variable, value) { lastVarParsed = variable; return { type: "variableDeclaration", variable, value: { type: "string", value } } };
  var peg$f36 = function(value) { 
    return { 
      type: "number", 
      value: parseFloat(value.reduce(
        (r, e) => r + (e.endsWith(".") ? ("" + (e.length - 1 % 10) + ".") : e.length % 10), 
        ""
      ))
    } 
  };
  var peg$f37 = function(c) { return c };
  var peg$f38 = function() { return "" };
  var peg$f39 = function(v) { return v.join("") };
  var peg$f40 = function() { return { type: "boolean", value: true } };
  var peg$f41 = function() { return { type: "boolean", value: false } };
  var peg$f42 = function() { return { type: "null", value: null } };
  var peg$f43 = function() { return { type: "string", value: "" } };
  var peg$f44 = function(value) { return { type: "number", value: parseFloat(value) } };
  var peg$f45 = function(value) { return { type: "string", value } };
  var peg$f46 = function(content) { return { type: "comment", content } };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parseScope();

    return s0;
  }

  function peg$parseScope() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseStatement();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 10) {
        s3 = peg$c0;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s3 !== peg$FAILED) {
        s3 = peg$parseStatement();
        if (s3 === peg$FAILED) {
          peg$currPos = s2;
          s2 = peg$FAILED;
        } else {
          s2 = s3;
        }
      } else {
        s2 = s3;
      }
    }
    if (input.charCodeAt(peg$currPos) === 10) {
      s2 = peg$c0;
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s2 === peg$FAILED) {
      s2 = peg$parseEOF();
    }
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f0(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStatement() {
    var s0;

    s0 = peg$parseAssignment();
    if (s0 === peg$FAILED) {
      s0 = peg$parseIncrement();
      if (s0 === peg$FAILED) {
        s0 = peg$parseDecrement();
        if (s0 === peg$FAILED) {
          s0 = peg$parseOutput();
          if (s0 === peg$FAILED) {
            s0 = peg$parseIfStatement();
            if (s0 === peg$FAILED) {
              s0 = peg$parseLoop();
              if (s0 === peg$FAILED) {
                s0 = peg$parseFunctionCall();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseLoopControl();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseFunctionDef();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseReturnValue();
                      if (s0 === peg$FAILED) {
                        s0 = peg$parseComment();
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseAssignment() {
    var s0, s1, s2, s3, s4, s5, s6, s7;
